<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_dark"
    android:id="@+id/activity_main_rl"
    >


    <LinearLayout
        android:id="@+id/activity_main_ll1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/iut_aerien"
        tools:context=".controller.MainActivity">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/logo_iut"
            android:contentDescription="@string/todo"/>


        <TextView
            android:id="@+id/activity_main_titre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/jeu_de_piste_l_iut"
            android:textColor="@android:color/background_light"
            android:textSize="30sp"
            android:textStyle="bold"/>


        <TextView
            android:id="@+id/activity_main_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/découvrez_l_iut_de_montpellier"
            android:textColor="@android:color/background_light"
            android:textSize="20sp"/>


        <Button
            android:id="@+id/activity_main_commencer_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:background="@android:color/background_light"
            android:padding="20dp"
            android:text="@string/commencer"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/activity_main_recommencer_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recommencer"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@android:color/background_light"
            android:padding="20dp"
            android:textSize="20sp"
            android:visibility="gone"/>


    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        >


        <Button
            android:id="@+id/activity_main_info_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_blue_dark"
            android:text="@string/informations"
            android:layout_gravity="start"
            tools:ignore="ButtonStyle"/>



        <Button
            android:id="@+id/activity_main_tutoriel_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@android:color/holo_blue_dark"
            android:text="@string/tutoriel"
            tools:ignore="ButtonStyle"/>

        <Button
            android:id="@+id/activity_main_langue_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:background="@android:color/holo_blue_dark"
            android:text="@string/langue"
            tools:ignore="ButtonStyle"/>



    </LinearLayout>

</RelativeLayout>




