<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".controller.BatimentActivity"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical">

    <TextView
        android:id="@+id/activity_batiment_nom_txt"
        android:paddingVertical="20dp"
        android:textSize="30sp"
        android:textColor="@android:color/white"
        android:background="@android:color/holo_blue_dark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/nom_batiment"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <com.github.chrisbanes.photoview.PhotoView
                android:id="@+id/activity_batiment_image_img"
                android:layout_width="match_parent"
                android:layout_height="276dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/batk" />

            <TextView
                android:id="@+id/activity_batiment_description_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="5dp"
                android:gravity="center"
                android:textSize="40sp"
                android:text="@string/description_batiment" />

            <Button
                android:id="@+id/activity_batiment_prochain_bat_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prochain_batiment_btn"
                android:gravity="center"
                android:background="@android:color/holo_blue_dark"
                android:textColor="@android:color/white"
                android:paddingLeft="20dp"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="20dp"
                android:paddingRight="20dp"
                android:layout_gravity="center" />

            <Button
                android:id="@+id/activity_batiment_retour_main_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/retour_au_menu"
                android:gravity="center"
                android:background="@android:color/holo_blue_dark"
                android:textColor="@android:color/white"
                android:paddingLeft="20dp"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="20dp"
                android:paddingRight="20dp"
                android:layout_gravity="center" />

        </LinearLayout>

    </ScrollView>



</LinearLayout>